On #335: - Reduced font-size for questions. -  Improved alignment between tables ( and solved the problem with elapsing tab names, a problem that will be now frequent since we have 3 databases and less space for each). - Started working on showing 3 databases at once.

--- a/emif/emif/static/css/main.css
+++ b/emif/emif/static/css/main.css
@@ -419,13 +419,13 @@ box-shadow: inset 0 3px 8px rgba(0,0,0,0.125);
 }
 .database_listing{
   padding:2px;
-  min-width: 300px; 
+  min-width: 200px; 
   display: table-cell;
 }
 
 .database_listing_names{
   padding:2px;
-  width: 250px; 
+  width: 200px; 
   display: table-cell;
 }
 
